# examples

./: Dockerfile  Examples.sln  README.md  deploy.sh
cedar-sharp/: Cargo.toml  build.rs  uniffi.toml
cedar-sharp/bindings/: cedarsharp.cs
cedar-sharp/src/: cedarsharp.udl  lib.rs
demo-portal/: README.md  deploy.sh  index.html  package-lock.json  package.json  vite.config.js
demo-portal/src/: App.vue  config.js  main.js
demo-portal/src/router/: index.js
demo-portal/src/services/: minimalApiClient.js
demo-portal/src/stores/: userStore.js
demo-portal/src/views/: HomeView.vue  ProfileView.vue  SigninView.vue
src/MinimalApi/: InternalsVisibleTo.cs  MinimalApi.csproj  MinimalApiJsonSerializerContext.cs  Program.cs  appsettings.Local.json  appsettings.json
src/MinimalApi/Bootstrap/: ConfigureCorsOptions.cs  ConfigureJwtBearerOptions.cs  WebApplicationBuilderExtensions.cs  WebApplicationExtensions.cs
src/MinimalApi/Controllers/: HealthController.cs
src/MinimalApi/DataAccess/: DynamoSeeder.cs
src/MinimalApi/Endpoints/: AuthorizationEndpoints.cs  DataEndpoints.cs  HealthEndpoints.cs  ProjectsEndpoints.cs  TestEndpoints.cs  UsersEndpoints.cs
src/MinimalApi/Infra/: AuthClaimsTransformation.cs  AuthorizationPolicyProvider.cs  AuthorizationServiceExtensions.cs  AvpOperationRequirementHandler.cs  CedarOperationRequirementHandler.cs  (+7 more)
test/MinimalApi.Tests/: AuthorizationTests.cs  AvpTests.cs  CedarAuthorizerTests.cs  CedarSharpTests.cs  DataAuthorizationTests.cs  InMemoryDynamoClientTests.cs  MinimalApi.Tests.csproj  ProjectAuthorizationTests.cs
(+77 files in other folders)
